<resources>
    <string name="app_name">android-nfc</string>
    <string name="title_activity_menu_main1">app_bar_menu_main1</string>
    <string name="subject_pom">POM</string>
    <string name="subject_fnft">FNFT</string>
    <string name="subject_cc">CC</string>
    <string name="subject_dm">DM</string>
    <string name="subject_gcn">GCN</string>
    <string name="subject_bfss">BFSS</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
