<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_course_list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ashutosh.foodie_guide.attendance_application.ActivityCourseList">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:background="#FAFAFA"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToPadding="false"
        android:fillViewport="true">
        <!-- The primary full-screen view. This can be replaced with whatever view
             is needed to present your content, e.g. VideoView, SurfaceView,
             TextureView, etc. -->

        <!-- This FrameLayout insets its children based on system windows using
             android:fitsSystemWi   ndows. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/subject_pom" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/subject_pom"
                        android:textStyle="bold"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/subject_bfss"/>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/subject_bfss"
                        android:textStyle="bold"/>
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/subject_cc"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/subject_cc"
                        android:textStyle="bold"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/subject_fnft"/>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/subject_fnft"
                        android:textStyle="bold"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:padding="10dp"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@string/subject_gcn"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/subject_gcn"
                        android:textStyle="bold"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".5">

                    <ImageButton
                        android:id="@+id/imageButton7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        android:layout_weight=".5"
                        android:padding="10dp"
                        android:src="@mipmap/ic_launcher"
                        tools:ignore="ObsoleteLayoutParam"
                        android:contentDescription="@string/subject_dm"/>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/subject_dm"
                        android:textStyle="bold"/>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
